--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Fri Jan 23 17:13:47 +0100 2009 Jim Meyering <meyering@redhat.com>
+
+	.cvsignore: Add explicit list of generated files.
+	* .hgignore: Regenerate.
+	* m4/.gitignore: Regenerate.
+
 Fri Jan 23 14:22:03 +0100 2009 Jim Meyering <meyering@redhat.com>
 
 	fix comment typo: s/contains/continues/
