--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Jan 27 10:38:09 +0100 2009 Jim Meyering <meyering@redhat.com>
+
+	update from gnulib
+
 Mon Jan 26 20:40:35 +0100 2009 Jim Meyering <meyering@redhat.com>
 
 	build: avoid format warnings
