--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Jan 27 16:27:07 +0100 2009 Jim Meyering <meyering@redhat.com>
+
+	* POTFILES.in: update: remove src/lxc_conf.c; Add src/bridge.c.
+
 Tue Jan 27 15:18:16 GMT 2009 Daniel P. Berrange <berrange@redhat.com>
 
 	Add RNG schemas for all XML file formats used in API.
