remote_internal.c: fix typo that would mistakenly report OOM
* src/remote_internal.c (addrToString): Report VIR_ERR_UNKNOWN_HOST,
not VIR_ERR_NO_MEMORY.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 Wed Jan 28 15:45:11 +0100 2009 Jim Meyering <meyering@redhat.com>
 
+	remote_internal.c: fix typo that would mistakenly report OOM
+	* src/remote_internal.c (addrToString): Report VIR_ERR_UNKNOWN_HOST,
+	not VIR_ERR_NO_MEMORY.
+
+Wed Jan 28 15:45:11 +0100 2009 Jim Meyering <meyering@redhat.com>
+
 	qparams.c: Use virReportOOMError(NULL), not qparam_report_oom()
 	* src/qparams.c (VIR_FROM_THIS): Define to VIR_FROM_NONE.
 	(qparam_report_oom): Remove definition.
